[workspace]
members = [
    "day1_trebuchet", 
    "day2_cube_conundrum", 
    "day3_gear_ratios", 
    "day4_scratch_cards",
    "day5_if_you_give_a_seed_a_fertilizer",
    "day6_wait_for_it",
    "day7_camel_cards",
    "day8_haunted_wasteland",
    "day9_mirage_maintenance",
    "day10_pipe_maze",
    "utils"
    ]